# DirIntegrityChecker

./: CMakeLists.txt  README.md  build.sh  main.cpp
app/: crc32.cpp  crc32.h  defer.h  dir_scanner.cpp  dir_scanner.h  format.h  join_threads.h  periodic_task.cpp  periodic_task.h  signal_handlers.h  stacktrace.h  thread_pool.h  thread_pool_queue.cpp  thread_pool_queue.h  waitgroup.h  watcher.cpp  watcher.h
